--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
+JWT_SECRET="zjP9h6ZI5LoSKCRiwer$5dfsa"
